added neuron layer functionality

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,6 +6,9 @@ CXXFLAGS = -g -Wall $(INCLUDES)
 LDFLAGS = -g
 LDLIBS = -L../src -lcocograd
 
+.PHONY: all
+all: clean value_operations simple_neural_net
+
 simple_neural_net: simple_neural_net.o
 
 simple_neural_net.o: simple_neural_net.c
@@ -14,12 +17,9 @@ value_operations: value_operations.o
 
 value_operations.o: value_operations.c
 
-.PHONY: all
-all: clean value_operations simple_neural_net
-
-# .PHONY: run
-# run: value_operations
-# 	./value_operations
+.PHONY: run
+run: $(prog)
+	./$(prog)
 
 # .PHONY: valgrind
 # valgrind: value_operations
